--- a/auto/config
+++ b/auto/config
@@ -145,7 +145,7 @@ lb config noauto \
   --memtest memtest86+ \
   --bootappend-live "boot=live components quiet splash noeject" \
   --bootappend-live-failsafe "boot=live components noeject memtest noapic noapm nodma nomce nolapic nomodeset nosmp nosplash vga=normal" \
-  --bootappend-install "net.ifnames=0" \
+#  --bootappend-install "net.ifnames=0" \
   --security false \
   --win32-loader false \
   $lb_opts \
