--- a/kali-config/common/bootloaders/grub-pc/grub.cfg
+++ b/kali-config/common/bootloaders/grub-pc/grub.cfg
@@ -18,21 +18,21 @@ menuentry "Live system with USB Encrypted persistence" {
 }
 
 # Installer (if any)
-LINUX_INSTALL
+#LINUX_INSTALL
+#
+#if [ ! -e /boot/grub/install.cfg ]; then
+#menuentry "Start installer with speech synthesis" {
+#        linux @KERNEL_GI@ speakup.synth=soft @APPEND_GI@
+#        initrd @INITRD_GI@
+#}
+#fi
 
-if [ ! -e /boot/grub/install.cfg ]; then
-menuentry "Start installer with speech synthesis" {
-        linux @KERNEL_GI@ speakup.synth=soft @APPEND_GI@
-        initrd @INITRD_GI@
-}
-fi
-
-submenu 'Advanced install options...' {
+#submenu 'Advanced install options...' {
 
 source /boot/grub/theme.cfg
 
 # More installer entries (if any)
-LINUX_ADVANCED_INSTALL
+#LINUX_ADVANCED_INSTALL
 
 # Memtest (if any)
 MEMTEST
