--- a/kali-config/common/includes.chroot/etc/live/config.conf.d/kali.conf
+++ b/kali-config/common/includes.chroot/etc/live/config.conf.d/kali.conf
@@ -1,4 +1,4 @@
 # Default kali configuration
-LIVE_HOSTNAME="pseudodragon"
-LIVE_USERNAME="pseudo"
-LIVE_USER_FULLNAME="Pseudodragon"
+LIVE_HOSTNAME="kali"
+LIVE_USERNAME="kali"
+LIVE_USER_FULLNAME="Kali Live user"
